General cleanup, path saving and more
